# magasc

./: Anchor.toml  perform_upkeep.rs
programs/mi-smartcontract/: Cargo.toml
programs/mi-smartcontract/src/: lib.rs
programs/mi-smartcontract/tests/: e2_flow_test.rs
