[package]
name = "mi_smart_contract"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []
cpi = []
custom-heap = []
custom-panic = []
anchor-debug = []
no-idl = []
no-log-ix-name = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1", features = ["metadata"] }

[dependencies.pyth-sdk-solana]
version = "0.10.1"
default-features = false

tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time"] }
solana-program-test = "1.14.20"
arbitrary = "1.4.2"

[dev-dependencies]
anchor-client = "0.30.1"
solana-program-test = "1.14.20"
tokio = { version = "1.28", features = ["macros", "rt-multi-thread", "time"] }
